So'ngi o'zgarishlar

--- a/themes/art-fakult/layouts/asosiy-layout.htm
+++ b/themes/art-fakult/layouts/asosiy-layout.htm
@@ -53,7 +53,7 @@
 <!--End latest blog area-->
  
 <!--Start Partner Area-->
-    {% partial "section-partner-area" %}
+    {# {% partial "section-partner-area" %} #}
 <!--End Partner Area--> 
  
   
