--- a/themes/art-fakult/partials/footer.htm
+++ b/themes/art-fakult/partials/footer.htm
@@ -10,14 +10,14 @@
                                 <a href="index.html"><img src="{{ 'assets/images/resources/logo-2.png'|theme }}" alt="Footer Logo"></a>
                             </div>
                             <div class="text">
-                                <p>In order to support the artisan facilities and the local inheritance in a whole, the Museum Histories takes pride in  representing the Artist Blanket – the final consequence of the early cooperation of the gallery artists.</p>
+                                <p>{{"Sayt Chirchiq davlat pedagogika universiteti, San'atshunoslik fakultetining Tasviriy san'at kafedrasi tashabbusi bilan yaratilgan."|_}}</p>
                                 <ul>
                                     <li>
                                         <div class="icon">
                                             <span class="flaticon-clock-1"></span>    
                                         </div>
                                         <div class="title">
-                                            <h5>Daily 9.30 am–6.00 pm Thursday and Holidays: Closed</h5>
+                                            <h5>{{"Chirchiq shahri, Amir Temur ko'chasi 104 uy"|_}}</h5>
                                         </div>
                                     </li>
                                     <li>
@@ -25,7 +25,7 @@
                                             <span class="flaticon-phone"></span>    
                                         </div>
                                         <div class="title">
-                                            <h3><a href="tel:16234569400">1 (623) 456-9400</a></h3>
+                                            <h3><a href="tel:998975476797">{{"+998(97)5476797"|_}}</a></h3>
                                         </div>
                                     </li>
                                     <li>
@@ -34,14 +34,14 @@
                                         </div>
                                         <div class="title">
                                             <h5>
-                                                <a href="https://www.museumhistories.com/">www.museumhistories.com</a><br> 
-                                                <a href="mailto:info@templatepath.com">museumhistories@hotmail.com</a>
+                                                <a href="https://cspi.uz/">{{"CHDPU web sayti"|_}}</a><br> 
+                                                <a href="mailto:{{'wi.fi.xor@gmail.com'|_}}">{{"wi.fi.xor@gmail.com"|_}}</a>
                                             </h5>
                                         </div>
                                     </li>
                                 </ul>
                                 <div class="contact-button">
-                                    <a class="btn-two" href="index-3.html#">View More</a>
+                                    <a class="btn-two" href="index-3.html#">{{"Ko'rish"|_}}</a>
                                 </div>
                             </div>
                         </div>
@@ -54,36 +54,25 @@
                     <div class="single-footer-widget-style2">
                         <div class="footer-map-holder">
                             <div class="map-outer">
-                                <!--Map Canvas-->
-                                <div class="map-canvas"
-                                    data-zoom="12"
-                                    data-lat="-37.817085"
-                                    data-lng="144.955631"
-                                    data-type="roadmap"
-                                    data-hue="#ffc400"
-                                    data-title="Envato"
-                                    data-icon-path="{{ 'assets/images/resources/map-marker.png'|theme }}"
-                                    data-content="Melbourne VIC 3000, Australia<br><a href='mailto:info@youremail.com'>info@youremail.com</a>">
-                                </div>
+                                <div id="map">
+                  <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3789e5c38013dd49db7342cc8dc4b92c46e7554fea76203f66c146ebc4ac265b&amp;width=100%&amp;height=440&amp;lang=ru_UA&amp;scroll=true"></script>
+                  </div>
                             </div>
-                            <div class="address-box">
-                                <h3>Address :-</h3>
-                                <p>2270 S Real Camino<br> Lake California, US 90967</p>
-                            </div>
+                            
                             <div class="footer-social-links">
-                                <div class="title">Follow Us :-</div>
+                                <div class="title">{{"Bizni kuzatib boring"|_}} :-</div>
                                 <ul class="social-links-style1">
                                     <li>
-                                        <a href="index-3.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+                                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
                                     </li>
                                     <li>
-                                        <a href="index-3.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a> 
+                                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a> 
                                     </li>
                                     <li>
-                                        <a href="index-3.html#"><i class="fa fa-envelope" aria-hidden="true"></i></a> 
+                                        <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a> 
                                     </li>
                                     <li>
-                                        <a href="index-3.html#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                        <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -98,7 +87,7 @@
     <div class="footer-bottom-style3">
         <div class="container">
             <div class="copyright-text text-center">
-                <p>© Copyright 2019 Museum Histories. All Rights Reserved</p>
+                <p>© Copyright 2023 CHDPU RTT. Fayziyev.R (RAXI-DEV)</p>
             </div>      
         </div>    
     </div>
