--- a/themes/art-fakult/partials/section-featured-area-library.htm
+++ b/themes/art-fakult/partials/section-featured-area-library.htm
@@ -80,7 +80,7 @@ sortDirection = "desc"
             <div class="col-xl-12">
                 <div class="featured-box">
                     <div class="title-box">
-                        <div class="sec-title">
+                        <div class="sec-title" style="padding-bottom: 70px;">
                             <p>{{"Library"|_}}</p>
                             <div class="big-title"><h1>{{"Bo'limlar"|_}}</h1></div>
                             <div class="row">
@@ -90,6 +90,7 @@ sortDirection = "desc"
                                     <li><a href="#">{{"Elektron kitoblar"|_}}</a></li>
                                     <li><a href="#">{{"Elektron resurslar"|_}}</a></li>
                                     <li><a href="#">{{"Elektron maqolalar"|_}}</a></li>
+                                   
                                   
                                 </ul>
                             </div>
