--- a/themes/art-fakult/partials/section-partner-area.htm
+++ b/themes/art-fakult/partials/section-partner-area.htm
@@ -1,8 +1,8 @@
 <section class="partner-area">
     <div class="container">
         <div class="sec-title text-center">
-            <p>PART OF THE MUSEUM</p>
-            <div class="big-title"><h1>Our Partners & Sponsers</h1></div>
+            <p>{{"Kafedra hamkorlari"|_}}</p>
+            <div class="big-title"><h1>{{"Hamkorlar"|_}}</h1></div>
         </div>
         <div class="row">
             <div class="col-xl-12">
