--- a/themes/art-fakult/assets/css/flaticon.css
+++ b/themes/art-fakult/assets/css/flaticon.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Flaticon";
   src: url("../fonts/flaticon.eot");
-  src: url("../fonts/flaticon.eot%3F") format("embedded-opentype"),
+  src: url("../fonts/flaticon.eot@") format("embedded-opentype"),
        url("../fonts/flaticon.woff") format("woff"),
        url("../fonts/flaticon.ttf") format("truetype"),
        url("../fonts/flaticon.svg") format("svg");
