--- a/themes/art-fakult/assets/css/style.css
+++ b/themes/art-fakult/assets/css/style.css
@@ -631,7 +631,7 @@ li{
     background-color:#ffffff; 
     background-position:center center; 
     background-repeat:no-repeat; 
-    background-image:url(../images/icon/loading.gif);
+    background-image:url(../images/icon/preloader.gif);
 }
 .preloader.style-two {
     background-image: url(http://mehedi.asiandevelopers.com/demo/museum/images/icon/preloader-1.gif);
