--- a/themes/art-fakult/partials/section-featured-area-library.htm
+++ b/themes/art-fakult/partials/section-featured-area-library.htm
@@ -19,7 +19,7 @@ sortDirection = "desc"
             <div class="col-xl-6 col-lg-10">
                 <div class="about-style1-left-content clearfix">
                     <div class="">
-                        <img style="width: 700px;" src="https://kafedra-october:8890/storage/app/media/uploaded-files/books.png" alt="Awesome Image">
+                        <img style="width: 700px;" src="{{'/storage/app/media/uploaded-files/books.png'}}" alt="Awesome Image">
                     </div>
                 </div>     
             </div>
