--- a/themes/art-fakult/assets/css/icomoon.css
+++ b/themes/art-fakult/assets/css/icomoon.css
@@ -1,11 +1,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot%3Fvdw2jk');
-  src:  url('../fonts/icomoon.eot%3Fvdw2jk') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf%3Fvdw2jk') format('truetype'),
-    url('../fonts/icomoon.woff%3Fvdw2jk') format('woff'),
-    url('../fonts/icomoon.svg%3Fvdw2jk') format('svg');
+  src:  url('../fonts/icomoon.eot@vdw2jk');
+  src:  url('../fonts/icomoon.eot@vdw2jk') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf@vdw2jk') format('truetype'),
+    url('../fonts/icomoon.woff@vdw2jk') format('woff'),
+    url('../fonts/icomoon.svg@vdw2jk') format('svg');
   font-weight: normal;
   font-style: normal;
 }
