--- a/themes/art-fakult/partials/main-header.htm
+++ b/themes/art-fakult/partials/main-header.htm
@@ -8,7 +8,7 @@ code = "asosiy-menyu"
             <div class="outer-box clearfix"> 
                 <div class="header-upper-left-style2 clearfix float-left">
                     <div class="logo">
-                        <a href="index.html"><img src="{{ 'assets/images/resources/logo-2.png'|theme }}" alt="Awesome Logo" title=""></a>
+                        <a href="{{'/'}}"><img src="{{ 'assets/images/resources/logo-2.png'|theme }}" alt="Awesome Logo" title=""></a>
                     </div>
                 </div>
                 <div class="header-upper-midlle-style2 float-left clearfix">
