--- a/themes/art-fakult/partials/main-header.htm
+++ b/themes/art-fakult/partials/main-header.htm
@@ -35,7 +35,7 @@ code = "asosiy-menyu"
                         <!-- Main Menu End-->
                         <div class="menu-right-content-style2">
                             <div class="user-icon-holder">
-                                <a href="index-2.html#"><span class="flaticon-user"></span></a>
+                                <a href="{{'/'}}"><span class="flaticon-user"></span></a>
                             </div>
                             <div class="outer-search-box-style1">
                                 <div class="seach-toggle"><i class="fa fa-search"></i></div>
@@ -74,7 +74,7 @@ code = "asosiy-menyu"
             <div class="clearfix">
                 <!--Logo-->
                 <div class="logo float-left">
-                    <a href="index.html" class="img-responsive"><img src="{{ 'assets/images/resources/logo.png'|theme }}" alt="" title=""></a>
+                    <a href="{{'/'}}" class="img-responsive"><img src="{{ 'assets/images/resources/logo.png'|theme }}" alt="" title=""></a>
                 </div>
                 <!--Right Col-->
                 <div class="right-col float-right">
